# opengl-win-demo

./: CMakeLists.txt  build.bat  rebuild.bat
src/: demo.cpp
